# ru_phone_validator

./: .gitignore  LICENSE  pyproject.toml  setup.cfg
src/ru_phone_validator/: validator.py
