[metadata]
name = ru_phone_validator
version = 0.0.1
author = Vadim Gorbachev
author_email = vadim.gorbachev.main@gmail.com
description = A small package for validation russian phone numbers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ProstoyVadila/ru_phone_validator
project_urls =
    Bug Tracker = https://github.com/ProstoyVadila/ru_phone_validator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src